syntax = "proto3";

option go_package = "github.com/ekkinox/fx-template/proto/ping";

package ping;

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}

service PingService {
  rpc Ping (PingRequest) returns (PingResponse);
}